added get category topics api

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,5 @@
 {
   "javascript300": "Javascript 300",
-  "fullStack": "FullStack"
+  "fullStack": "FullStack",
+  "somethingWentWrong": "Something went wrong"
 }
