added header icons

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,5 +23,6 @@
   "ecmascript": "ECMAscript",
   "html": "HTML",
   "javascript": "Javascript",
-  "nodejs": "Node JS"
+  "nodejs": "Node JS",
+  "back": "Back"
 }
